added favicon in index.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>Prashant Kumar | Portfolio</title>
 
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/svg+xml" href="assets/dna-logo.svg" sizes="32x32">
 </head>
 
 <body>
@@ -101,5 +102,6 @@
 
     <script src="script.js"></script>
 </body>
+
 
 </html>
