added favicon in academics.html

--- a/academics.html
+++ b/academics.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Academics | Prashant Kumar</title>
-
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap"
         rel="stylesheet" />
+    
+    <title>Prashant | Academics</title>
+    
     <link rel="stylesheet" href="academics.css" />
+    <link rel="icon" type="image/png" href="assets/academic.png">
 </head>
 
 <body>
@@ -112,7 +114,6 @@
     <footer class="footer">
         <div class="footer-container">
 
-            <!-- Left: Emails -->
             <div class="footer-section">
                 <h4>Email:</h4>
                 <p>Personal - <a href="mailto:prashantk32@proton.me">prashantk32@proton.me</a></p>
@@ -120,7 +121,6 @@
                 <p>Institute - </p>
             </div>
 
-            <!-- Middle: Socials -->
             <div class="footer-section">
                 <h4>Socials</h4>
                 <p><a href="https://github.com/scaram0uche-128" target="_blank">GitHub</a></p>
@@ -130,7 +130,6 @@
                 <p><a href="https://www.freecodecamp.org/prashant-dev" target="_blank">freeCodeCamp.org</a></p>
             </div>
 
-            <!-- Right: Copyright -->
             <div class="footer-section copyright">
                 <p>© 2025 | Prashant Kumar</p>
                 <p>Proudly built by hand.</p>
@@ -141,5 +140,6 @@
 
     <script src="script.js"></script>
 </body>
+
 
 </html>
