--- a/skills.html
+++ b/skills.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skills | Prashant Kumar</title>
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-
+    
+    <title>Prashant | Skills</title>
     <link rel="stylesheet" href="skills.css">
+    <link rel="icon" type="image/png" href="assets/skills.png">
 </head>
 
 <body>
@@ -115,7 +115,6 @@
     <footer class="footer">
         <div class="footer-container">
 
-            <!-- Left: Emails -->
             <div class="footer-section">
                 <h4>Email:</h4>
                 <p>Personal - <a href="mailto:prashantk32@proton.me">prashantk32@proton.me</a></p>
@@ -123,7 +122,6 @@
                 <p>Institute - </p>
             </div>
 
-            <!-- Middle: Socials -->
             <div class="footer-section">
                 <h4>Socials</h4>
                 <p><a href="https://github.com/scaram0uche-128" target="_blank">GitHub</a></p>
@@ -132,7 +130,6 @@
                 <p><a href="https://www.freecodecamp.org/prashant-dev" target="_blank">freeCodeCamp.org</a></p>
             </div>
 
-            <!-- Right: Copyright -->
             <div class="footer-section copyright">
                 <p>© 2025 | Prashant Kumar</p>
                 <p>Proudly built by hand.</p>
@@ -143,5 +140,4 @@
 
     <script src="script.js"></script>
 </body>
-
 </html>
