--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
                     (IISER), Kolkata.
                 </p>
                 <p>
-                    I'm currently interested in Molecular Biology, Biochemistry and Computer Science. Besides my
-                    academics, I'm into Web Development and improving my skills there.
+                    I’m currently exploring Molecular Biology, Biochemistry, and Computer Science. At this stage, I’m keeping my focus broad, exploring different subjects before narrowing down to a specific field or topic..
                 </p>
                 <p>
                     You can visit my LinkedIn, GitHub and other profiles to know more about my skills and works.
@@ -73,25 +72,21 @@
     <!-- ============ footer ============ -->
     <footer class="footer">
         <div class="footer-container">
-
-            <!-- Left: Emails -->
             <div class="footer-section">
                 <h4>Email:</h4>
                 <p>Personal - <a href="mailto:prashantk32@proton.me">prashantk32@proton.me</a></p>
                 <p>Academic - <a href="mailto:prashantk.research@gmail.com">prashantk.research@gmail.com</a></p>
-                <p>Institute - </p>
+                <p>Institute - <a href="mailto:pk25ms004@iiserkol.ac.in"></a>pk25ms004@iiserkol.ac.in</p>
             </div>
-
-            <!-- Middle: Socials -->
+            
             <div class="footer-section">
                 <h4>Socials</h4>
                 <p><a href="https://github.com/scaram0uche-128" target="_blank">GitHub</a></p>
                 <p><a href="https://www.linkedin.com/in/prashant-k128/" target="_blank">LinkedIn</a></p>
                 <p><a href="https://www.frontendmentor.io/profile/scaram0uche-128" target="_blank">Frontend Mentor</a></p>
-                <p><a href="https://www.freecodecamp.org/prashant-dev" target="_blank">freeCodeCamp.org</a></p>
+                <p><a href="https://leetcode.com/u/scaram0uche-128/" target="_blank">LeetCode</a></p>
             </div>
-
-            <!-- Right: Copyright -->
+            
             <div class="footer-section copyright">
                 <p>© 2025 | Prashant Kumar</p>
                 <p>Proudly built by hand.</p>
@@ -105,3 +100,4 @@
 
 
 </html>
+
