--- a/projects.html
+++ b/projects.html
@@ -80,7 +80,7 @@
             <a href="https://github.com/scaram0uche-128/my_portfolio" target="_blank" class="btn">GitHub Repo</a>
         </div>
 
-        <div class="project-card" data-category="academic">
+<!--         <div class="project-card" data-category="academic">
             <h3>_sample_</h3>
             <span class="badge academic">Academic</span>
             <p>This is just a sample.</p>
@@ -88,7 +88,7 @@
                 <span>Physics</span><span>Mathematics</span>
             </div>
             <a href="#" class="btn">Read Report</a>
-        </div>
+        </div> -->
     </section>
 
     <!-- Footer -->
@@ -99,7 +99,7 @@
                 <h4>Email:</h4>
                 <p>Personal - <a href="mailto:prashantk32@proton.me">prashantk32@proton.me</a></p>
                 <p>Academic - <a href="mailto:prashantk.research@gmail.com">prashantk.research@gmail.com</a></p>
-                <p>Institute - </p>
+                <p>Institute - <a href="mailto:pk25ms004@iiserkol.ac.in"></a>pk25ms004@iiserkol.ac.in</p>
             </div>
 
             <div class="footer-section">
@@ -107,7 +107,7 @@
                 <p><a href="https://github.com/scaram0uche-128" target="_blank">GitHub</a></p>
                 <p><a href="https://www.linkedin.com/in/prashant-k128/" target="_blank">LinkedIn</a></p>
                 <p><a href="https://www.frontendmentor.io/profile/scaram0uche-128" target="_blank">Frontend Mentor</a></p>
-                <p><a href="https://www.freecodecamp.org/prashant-dev" target="_blank">freeCodeCamp.org</a></p>
+                <p><a href="https://leetcode.com/u/scaram0uche-128/" target="_blank">LeetCode</a></p>
             </div>
 
             <div class="footer-section copyright">
@@ -120,6 +120,5 @@
 
     <script src="script.js"></script>
 </body>
-
-
 </html>
+
