--- a/research.html
+++ b/research.html
@@ -60,7 +60,7 @@
                 <h4>Email:</h4>
                 <p>Personal - <a href="mailto:prashantk32@proton.me">prashantk32@proton.me</a></p>
                 <p>Academic - <a href="mailto:prashantk.research@gmail.com">prashantk.research@gmail.com</a></p>
-                <p>Institute - </p>
+                <p>Institute - <a href="mailto:pk25ms004@iiserkol.ac.in"></a>pk25ms004@iiserkol.ac.in</p>
             </div>
 
             <div class="footer-section">
@@ -68,7 +68,7 @@
                 <p><a href="https://github.com/scaram0uche-128" target="_blank">GitHub</a></p>
                 <p><a href="https://www.linkedin.com/in/prashant-k128/" target="_blank">LinkedIn</a></p>
                 <p><a href="https://www.frontendmentor.io/profile/scaram0uche-128" target="_blank">Frontend Mentor</a></p>
-                <p><a href="https://www.freecodecamp.org/prashant-dev" target="_blank">freeCodeCamp.org</a></p>
+                <p><a href="https://leetcode.com/u/scaram0uche-128/" target="_blank">LeetCode</a></p>
             </div>
 
             <div class="footer-section copyright">
@@ -81,6 +81,5 @@
 
     <script src="script.js"></script>
 </body>
-
-
 </html>
+
