--- a/skills.html
+++ b/skills.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="skill-card">
                     <img src="assets/r-logo.png" alt="R">
-                    <p>R (Language)</p>
+                    <p>R</p>
                 </div>
                 <div class="skill-card">
                     <img src="assets/c-logo.png" alt="C">
@@ -77,10 +77,6 @@
                 <div class="skill-card">
                     <img src="assets/javascript-logo.png" alt="JavaScript">
                     <p>JavaScript</p>
-                </div>
-                <div class="skill-card">
-                    <img src="assets/react.png" alt="React">
-                    <p>React <strong>(Learning)</strong></p>
                 </div>
             </div>
 
@@ -119,7 +115,7 @@
                 <h4>Email:</h4>
                 <p>Personal - <a href="mailto:prashantk32@proton.me">prashantk32@proton.me</a></p>
                 <p>Academic - <a href="mailto:prashantk.research@gmail.com">prashantk.research@gmail.com</a></p>
-                <p>Institute - </p>
+                <p>Institute - <a href="mailto:pk25ms004@iiserkol.ac.in"></a>pk25ms004@iiserkol.ac.in</p>
             </div>
 
             <div class="footer-section">
@@ -127,17 +123,17 @@
                 <p><a href="https://github.com/scaram0uche-128" target="_blank">GitHub</a></p>
                 <p><a href="https://www.linkedin.com/in/prashant-k128/" target="_blank">LinkedIn</a></p>
                 <p><a href="https://www.frontendmentor.io/profile/scaram0uche-128" target="_blank">Frontend Mentor</a></p>
-                <p><a href="https://www.freecodecamp.org/prashant-dev" target="_blank">freeCodeCamp.org</a></p>
+                <p><a href="https://leetcode.com/u/scaram0uche-128/" target="_blank">LeetCode</a></p>
             </div>
 
             <div class="footer-section copyright">
                 <p>© 2025 | Prashant Kumar</p>
                 <p>Proudly built by hand.</p>
             </div>
-
         </div>
     </footer>
 
     <script src="script.js"></script>
 </body>
 </html>
+
