made all the changes with institute mail

--- a/skills.html
+++ b/skills.html
@@ -115,7 +115,7 @@
                 <h4>Email:</h4>
                 <p>Personal - <a href="mailto:prashantk32@proton.me">prashantk32@proton.me</a></p>
                 <p>Academic - <a href="mailto:prashantk.research@gmail.com">prashantk.research@gmail.com</a></p>
-                <p>Institute - <a href="mailto:pk25ms004@iiserkol.ac.in"></a>pk25ms004@iiserkol.ac.in</p>
+                <p>Institute - <a href="mailto:pk25ms004@iiserkol.ac.in">pk25ms004@iiserkol.ac.in</a></p>
             </div>
 
             <div class="footer-section">
