made significant changes, ordering things

--- a/academics.html
+++ b/academics.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap"
         rel="stylesheet" />
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
     <title>Prashant | Academics</title>
-    
+
     <link rel="stylesheet" href="academics.css" />
+    <link rel="stylesheet" href="global.css" class="css">
     <link rel="icon" type="image/png" href="assets/academic.png">
 </head>
 
@@ -106,7 +108,7 @@
     <section class="achievements">
         <h2>Academic Achievements</h2>
         <ul>
-<!--             <li>🏆 for_sample</li> -->
+            <!--             <li>🏆 for_sample</li> -->
         </ul>
     </section>
 
@@ -123,11 +125,12 @@
 
             <div class="footer-section">
                 <h4>Socials</h4>
-                <p><a href="https://github.com/scaram0uche-128" target="_blank">GitHub</a></p>
-                <p><a href="https://www.linkedin.com/in/prashant-k128/" target="_blank">LinkedIn</a></p>
-                <p><a href="https://www.frontendmentor.io/profile/scaram0uche-128" target="_blank">Frontend Mentor</a>
-                </p>
-                <p><a href="https://leetcode.com/u/scaram0uche-128/" target="_blank">LeetCode</a></p>
+                <p><a href="https://github.com/scaram0uche-128" target="_blank" rel="noopener noreferrer"><i
+                            class="fa-brands fa-github"></i> GitHub</a></p>
+                <p><a href="https://www.linkedin.com/in/prashant-k128/" target="_blank" rel="noopener noreferrer"><i
+                            class="fa-brands fa-linkedin"></i> LinkedIn</a></p>
+                <p><a href="https://www.frontendmentor.io/profile/scaram0uche-128" target="_blank"
+                        rel="noopener noreferrer"><i class="fa-solid fa-code"></i> Frontend Mentor</a></p>
             </div>
 
             <div class="footer-section copyright">
@@ -140,5 +143,5 @@
 
     <script src="script.js"></script>
 </body>
-</html>
 
+</html>
