--- a/skills.html
+++ b/skills.html
@@ -4,13 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Skills and technologies Prashant Kumar is proficient in, including Programming, Web Development, and various tools.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
     <title>Prashant | Skills</title>
     <link rel="stylesheet" href="skills.css">
+    <link rel="stylesheet" href="global.css" class="css">
     <link rel="icon" type="image/png" href="assets/skills.png">
 </head>
 
@@ -30,9 +34,9 @@
                     <span class="close-btn" id="closeBtn">&times;</span>
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="academics.html" target="_blank">Academics</a></li>
-                        <li><a href="research.html" target="_blank">Research</a></li>
-                        <li><a href="projects.html" target="_blank">Projects</a></li>
+                        <li><a href="academics.html" target="_blank" rel="noopener noreferrer">Academics</a></li>
+                        <li><a href="research.html" target="_blank" rel="noopener noreferrer">Research</a></li>
+                        <li><a href="projects.html" target="_blank" rel="noopener noreferrer">Projects</a></li>
                     </ul>
                 </div>
             </div>
@@ -120,10 +124,12 @@
 
             <div class="footer-section">
                 <h4>Socials</h4>
-                <p><a href="https://github.com/scaram0uche-128" target="_blank">GitHub</a></p>
-                <p><a href="https://www.linkedin.com/in/prashant-k128/" target="_blank">LinkedIn</a></p>
-                <p><a href="https://www.frontendmentor.io/profile/scaram0uche-128" target="_blank">Frontend Mentor</a></p>
-                <p><a href="https://leetcode.com/u/scaram0uche-128/" target="_blank">LeetCode</a></p>
+                <p><a href="https://github.com/scaram0uche-128" target="_blank" rel="noopener noreferrer"><i
+                            class="fa-brands fa-github"></i> GitHub</a></p>
+                <p><a href="https://www.linkedin.com/in/prashant-k128/" target="_blank" rel="noopener noreferrer"><i
+                            class="fa-brands fa-linkedin"></i> LinkedIn</a></p>
+                <p><a href="https://www.frontendmentor.io/profile/scaram0uche-128" target="_blank"
+                        rel="noopener noreferrer"><i class="fa-solid fa-code"></i> Frontend Mentor</a></p>
             </div>
 
             <div class="footer-section copyright">
@@ -135,5 +141,5 @@
 
     <script src="script.js"></script>
 </body>
-</html>
 
+</html>
