--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Portfolio of Prashant Kumar, a BS-MS research student at IISER Kolkata exploring Molecular Biology, Biochemistry, and Computer Science.">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
     <title>Prashant Kumar | Portfolio</title>
 
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="global.css" class="css">
     <link rel="icon" type="image/svg+xml" href="assets/dna-logo.svg" sizes="32x32">
 </head>
 
@@ -34,10 +38,10 @@
                 <div class="nav-links" id="navLinks">
                     <span class="close-btn" id="closeBtn">&times;</span>
                     <ul>
-                        <li><a href="academics.html" target="_blank">Academics</a></li>
-                        <li><a href="research.html" target="_blank">Research</a></li>
-                        <li><a href="skills.html" target="_blank">Skills</a></li>
-                        <li><a href="projects.html" target="_blank">Projects</a></li>
+                        <li><a href="academics.html" target="_blank" rel="noopener noreferrer">Academics</a></li>
+                        <li><a href="research.html" target="_blank" rel="noopener noreferrer">Research</a></li>
+                        <li><a href="skills.html" target="_blank" rel="noopener noreferrer">Skills</a></li>
+                        <li><a href="projects.html" target="_blank" rel="noopener noreferrer">Projects</a></li>
 
                     </ul>
                 </div>
@@ -51,7 +55,7 @@
     <section class="about-section">
         <div class="about-container">
             <div class="about-image">
-                <img src="assets/my-photo.jpg" alt="Profile Photo">
+                <img src="assets/my-photo.jpg" alt="Prashant Kumar Profile Photo">
             </div>
             <div class="about-text">
                 <h1>Prashant Kumar</h1>
@@ -60,7 +64,9 @@
                     (IISER), Kolkata.
                 </p>
                 <p>
-                    I’m currently exploring Molecular Biology, Biochemistry, and Computer Science. At this stage, I’m keeping my focus broad, exploring different subjects before narrowing down to a specific field or topic..
+                    I’m currently exploring Molecular Biology, Biochemistry, and Computer Science. At this stage, I’m
+                    keeping my focus broad, exploring different subjects before narrowing down to a specific field or
+                    topic..
                 </p>
                 <p>
                     You can visit my LinkedIn, GitHub and other profiles to know more about my skills and works.
@@ -76,22 +82,23 @@
                 <h4>Email:</h4>
                 <p>Personal - <a href="mailto:prashantk32@proton.me">prashantk32@proton.me</a></p>
                 <p>Academic - <a href="mailto:prashantk.research@gmail.com">prashantk.research@gmail.com</a></p>
-                <p>Institute - <a href="mailto:pk25ms004@iiserkol.ac.in"></a>pk25ms004@iiserkol.ac.in</p>
+                <p>Institute - <a href="mailto:pk25ms004@iiserkol.ac.in">pk25ms004@iiserkol.ac.in</a></p>
             </div>
-            
+
             <div class="footer-section">
                 <h4>Socials</h4>
-                <p><a href="https://github.com/scaram0uche-128" target="_blank">GitHub</a></p>
-                <p><a href="https://www.linkedin.com/in/prashant-k128/" target="_blank">LinkedIn</a></p>
-                <p><a href="https://www.frontendmentor.io/profile/scaram0uche-128" target="_blank">Frontend Mentor</a></p>
-                <p><a href="https://leetcode.com/u/scaram0uche-128/" target="_blank">LeetCode</a></p>
+                <p><a href="https://github.com/scaram0uche-128" target="_blank" rel="noopener noreferrer"><i
+                            class="fa-brands fa-github"></i> GitHub</a></p>
+                <p><a href="https://www.linkedin.com/in/prashant-k128/" target="_blank" rel="noopener noreferrer"><i
+                            class="fa-brands fa-linkedin"></i> LinkedIn</a></p>
+                <p><a href="https://www.frontendmentor.io/profile/scaram0uche-128" target="_blank"
+                        rel="noopener noreferrer"><i class="fa-solid fa-code"></i> Frontend Mentor</a></p>
             </div>
-            
+
             <div class="footer-section copyright">
                 <p>© 2025 | Prashant Kumar</p>
                 <p>Proudly built by hand.</p>
             </div>
-
         </div>
     </footer>
 
@@ -100,4 +107,3 @@
 
 
 </html>
-
