--- a/research.html
+++ b/research.html
@@ -8,9 +8,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
     <title>Prashant | Research</title>
     <link rel="stylesheet" href="research.css">
+    <link rel="stylesheet" href="global.css" class="css">
     <link rel="icon" type="image/png" href="assets/research.png">
 </head>
 
@@ -65,10 +67,12 @@
 
             <div class="footer-section">
                 <h4>Socials</h4>
-                <p><a href="https://github.com/scaram0uche-128" target="_blank">GitHub</a></p>
-                <p><a href="https://www.linkedin.com/in/prashant-k128/" target="_blank">LinkedIn</a></p>
-                <p><a href="https://www.frontendmentor.io/profile/scaram0uche-128" target="_blank">Frontend Mentor</a></p>
-                <p><a href="https://leetcode.com/u/scaram0uche-128/" target="_blank">LeetCode</a></p>
+                <p><a href="https://github.com/scaram0uche-128" target="_blank" rel="noopener noreferrer"><i
+                            class="fa-brands fa-github"></i> GitHub</a></p>
+                <p><a href="https://www.linkedin.com/in/prashant-k128/" target="_blank" rel="noopener noreferrer"><i
+                            class="fa-brands fa-linkedin"></i> LinkedIn</a></p>
+                <p><a href="https://www.frontendmentor.io/profile/scaram0uche-128" target="_blank"
+                        rel="noopener noreferrer"><i class="fa-solid fa-code"></i> Frontend Mentor</a></p>
             </div>
 
             <div class="footer-section copyright">
@@ -81,5 +85,5 @@
 
     <script src="script.js"></script>
 </body>
-</html>
 
+</html>
