removed target-_blank part

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                 <div class="nav-links" id="navLinks">
                     <span class="close-btn" id="closeBtn">&times;</span>
                     <ul>
-                        <li><a href="academics.html" target="_blank" rel="noopener noreferrer">Academics</a></li>
-                        <li><a href="research.html" target="_blank" rel="noopener noreferrer">Research</a></li>
-                        <li><a href="skills.html" target="_blank" rel="noopener noreferrer">Skills</a></li>
-                        <li><a href="projects.html" target="_blank" rel="noopener noreferrer">Projects</a></li>
+                        <li><a href="academics.html">Academics</a></li>
+                        <li><a href="research.html">Research</a></li>
+                        <li><a href="skills.html">Skills</a></li>
+                        <li><a href="projects.html">Projects</a></li>
 
                     </ul>
                 </div>
