--- a/academics.html
+++ b/academics.html
@@ -35,9 +35,9 @@
                     <span class="close-btn" id="closeBtn">&times;</span>
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="research.html" target="_blank">Research</a></li>
-                        <li><a href="skills.html" target="_blank">Skills</a></li>
-                        <li><a href="projects.html" target="_blank">Projects</a></li>
+                        <li><a href="research.html">Research</a></li>
+                        <li><a href="skills.html">Skills</a></li>
+                        <li><a href="projects.html">Projects</a></li>
                     </ul>
                 </div>
             </div>
