--- a/projects.html
+++ b/projects.html
@@ -36,9 +36,9 @@
                     <span class="close-btn" id="closeBtn">&times;</span>
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="academics.html" target="_blank">Academics</a></li>
-                        <li><a href="research.html" target="_blank">Research</a></li>
-                        <li><a href="skills.html" target="_blank">Skills</a></li>
+                        <li><a href="academics.html">Academics</a></li>
+                        <li><a href="research.html">Research</a></li>
+                        <li><a href="skills.html">Skills</a></li>
                     </ul>
                 </div>
             </div>
