--- a/research.html
+++ b/research.html
@@ -34,9 +34,9 @@
                     <span class="close-btn" id="closeBtn">&times;</span>
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="academics.html" target="_blank">Academics</a></li>
-                        <li><a href="skills.html" target="_blank">Skills</a></li>
-                        <li><a href="projects.html" target="_blank">Projects</a></li>
+                        <li><a href="academics.html">Academics</a></li>
+                        <li><a href="skills.html">Skills</a></li>
+                        <li><a href="projects.html">Projects</a></li>
                     </ul>
                 </div>
             </div>
