--- a/skills.html
+++ b/skills.html
@@ -34,9 +34,9 @@
                     <span class="close-btn" id="closeBtn">&times;</span>
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="academics.html" target="_blank" rel="noopener noreferrer">Academics</a></li>
-                        <li><a href="research.html" target="_blank" rel="noopener noreferrer">Research</a></li>
-                        <li><a href="projects.html" target="_blank" rel="noopener noreferrer">Projects</a></li>
+                        <li><a href="academics.html">Academics</a></li>
+                        <li><a href="research.html">Research</a></li>
+                        <li><a href="projects.html">Projects</a></li>
                     </ul>
                 </div>
             </div>
