changed the writing stuffs

--- a/projects.html
+++ b/projects.html
@@ -39,6 +39,7 @@
                         <li><a href="academics.html">Academics</a></li>
                         <li><a href="research.html">Research</a></li>
                         <li><a href="skills.html">Skills</a></li>
+                        <li><a href="projects.html">Projects</a></li>
                     </ul>
                 </div>
             </div>
@@ -49,7 +50,7 @@
 
     <section class="projects-hero">
         <h1>My Projects</h1>
-        <p>A collection of my technical and academic work</p>
+        <p>Here's the collection of Projects I created, including Academic and Tech-related stuffs. Some are serious ones, others are just my mind's curiosity. </p>
     </section>
 
     <div class="filter-buttons">
