--- a/academics.html
+++ b/academics.html
@@ -35,6 +35,7 @@
                     <span class="close-btn" id="closeBtn">&times;</span>
                     <ul>
                         <li><a href="index.html">Home</a></li>
+                        <li><a href="academics.html">Academics</a></li>
                         <li><a href="research.html">Research</a></li>
                         <li><a href="skills.html">Skills</a></li>
                         <li><a href="projects.html">Projects</a></li>
@@ -44,27 +45,6 @@
         </nav>
     </header>
 
-    <!-- About College -->
-    <section class="about-college">
-        <div class="container">
-            <h1>About College <a href="https://www.iiserkol.ac.in/" target="_blank">
-                    <img class="logo-img" src="https://iiseradmission.in/images/kolkata.svg" alt="IISER Kolkata Logo"
-                        width="40" height="35" />
-                </a></h1>
-            <h3>Indian Institute of Science Education and Research (IISER), Kolkata </h3>
-            <p>
-                Founded in 2006 by the Ministry of Education (Government of India), IISER Kolkata is a premier institute
-                dedicated to integrating world-class education with cutting-edge research in the basic sciences.
-                Declared an Institute of National Importance in 2012, IISER Kolkata stands among the leading scientific
-                institutes of the country.
-            </p>
-            <p>Programs span disciplines such as Biological Sciences, Chemical Sciences, Physical Sciences, Earth
-                Sciences, Mathematics & Statistics, Computational & Data Sciences, and Humanities & Social Sciences.
-                <br> IISER Kolkata combines academic excellence, cutting-edge research, and vibrant student life to
-                nurture the next generation of scientists and innovators.
-            </p>
-        </div>
-    </section>
 
     <!-- Parallax banner -->
     <section class="parallax" aria-label="Campus banner"></section>
