--- a/research.html
+++ b/research.html
@@ -35,6 +35,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="academics.html">Academics</a></li>
+                        <li><a href="research.html">Research</a></li>
                         <li><a href="skills.html">Skills</a></li>
                         <li><a href="projects.html">Projects</a></li>
                     </ul>
