changed project section, some small tweaks

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="academics.html">Academics</a></li>
-                        <li><a href="research.html">Research</a></li>
                         <li><a href="skills.html">Skills</a></li>
                         <li><a href="projects.html">Projects</a></li>
+                        <li><a href="research.html">Research</a></li>
                     </ul>
                 </div>
             </div>
@@ -59,10 +59,12 @@
             <div class="about-text">
                 <h1>Prashant Kumar</h1>
                 <p>
-                    I am a first year BS-MS research student at Indian Institute of Science Education & Research, Kolkata. (<strong>IISER-K</strong>)
+                    I am a first year BS-MS research student at Indian Institute of Science Education & Research,
+                    Kolkata. (<strong>IISER-K</strong>)
                 </p>
                 <p>
-                    I'm currently interested in <strong>Molecular Biology</strong>  (a more specific topic). In general I like Physics, Biology, Mathematics & Computer Science in which I'm diving deep and learning.
+                    I'm currently interested in <strong>Molecular Biology</strong> (a more specific topic). In general I
+                    like Physics, Biology, Mathematics & Computer Science in which I'm diving deep and learning.
                 </p>
                 <p>
                     You can visit my LinkedIn, GitHub and other profiles to know more about my skills and works. <br>
