--- a/projects.html
+++ b/projects.html
@@ -4,21 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Portfolio of Prashant Kumar, a BS-MS research student at IISER Kolkata.">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
-    <title>Prashant | Projects</title>
+    <title>Prashant Kumar | Portfolio</title>
+
     <link rel="stylesheet" href="projects.css">
     <link rel="stylesheet" href="global.css" class="css">
-    <link rel="icon" type="image/png" href="assets/project.png">
-
+    <link rel="icon" type="image/svg+xml" href="assets/dna-logo.svg" sizes="32x32">
 </head>
 
 <body>
-    <!-- Navbar -->
+    <!-- ============ nav_bar ========= -->
     <header>
         <nav class="navbar">
             <div class="nav-container">
@@ -37,9 +39,9 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="academics.html">Academics</a></li>
-                        <li><a href="research.html">Research</a></li>
                         <li><a href="skills.html">Skills</a></li>
                         <li><a href="projects.html">Projects</a></li>
+                        <li><a href="research.html">Research</a></li>
                     </ul>
                 </div>
             </div>
@@ -50,7 +52,8 @@
 
     <section class="projects-hero">
         <h1>My Projects</h1>
-        <p>Here's the collection of Projects I created, including Academic and Tech-related stuffs. Some are serious ones, others are just my mind's curiosity. </p>
+        <p>Here's the collection of Projects I created, including Academic and Tech-related stuffs. Some are serious
+            ones, others are just my mind's curiosity.</p>
     </section>
 
     <div class="filter-buttons">
@@ -62,39 +65,68 @@
     <!-- Project Cards -->
     <section class="projects-grid">
 
+        <!-- Frontend Mentor Projects -->
         <div class="project-card" data-category="tech">
-            <h3>Frontend Web Development Projects</h3>
-            <span class="badge tech">Tech</span>
-            <p>Visit the link below to see my projects in <strong><a href="https://www.frontendmentor.io/"
-                        target="_blank">Frontend Mentor.</a></strong></p>
-            <div class="tags">
-                <span>HTML</span><span>CSS</span><span>JavaScript</span>
+            <div class="project-image">
+                <img src="assets/frontend-mentor.png" alt="Frontend Mentor Projects">
             </div>
-            <a href="https://github.com/scaram0uche-128/Frontend-Mentor-Projects" target="_blank" class="btn">GitHub
-                Repo</a>
-            <a href="https://www.frontendmentor.io/profile/scaram0uche-128" target="_blank" class="btn">Frontend Mentor
-                Profile</a>
+            <div class="project-description">
+                <div class="project-header">
+                    <h3>Frontend Mentor Projects</h3>
+                    <div class="project-links">
+                        <a href="https://github.com/scaram0uche-128/Frontend-Mentor-Projects" target="_blank"
+                            class="project-link" aria-label="GitHub Repo">
+                            <i class="fa-brands fa-github"></i>
+                        </a>
+                        <a href="https://www.frontendmentor.io/profile/scaram0uche-128" target="_blank"
+                            class="project-link" aria-label="Frontend Mentor Profile">
+                            <i class="fa-solid fa-code"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="project-technologies">
+                    <span class="tech-pill html-css">HTML</span>
+                    <span class="tech-pill html-css">CSS</span>
+                    <span class="tech-pill js">JavaScript</span>
+                </div>
+                <hr>
+                <p>
+                    Here's the collection of Frontend Web Development Project I did while learning. This is from the
+                    platform, <strong>Frontend Mentor</strong>, where developers can practice and improve their frontend
+                    web development
+                    skills.
+                </p>
+            </div>
         </div>
 
+        <!-- Portfolio Website -->
         <div class="project-card" data-category="tech">
-            <h3>Portfolio Website</h3>
-            <span class="badge tech">Tech</span>
-            <p>The personal portfolio website I designed.</strong></p>
-            <div class="tags">
-                <span>HTML</span><span>CSS</span><span>JavaScript</span>
+            <div class="project-image">
+                <img src="assets/my-portfolio.png" alt="Portfolio Website">
             </div>
-            <a href="https://github.com/scaram0uche-128/my_portfolio" target="_blank" class="btn">GitHub Repo</a>
+            <div class="project-description">
+                <div class="project-header">
+                    <h3>Portfolio Website</h3>
+                    <div class="project-links">
+                        <a href="https://github.com/scaram0uche-128/my_portfolio" target="_blank" class="project-link"
+                            aria-label="GitHub Repo">
+                            <i class="fa-brands fa-github"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="project-technologies">
+                    <span class="tech-pill html-css">HTML</span>
+                    <span class="tech-pill html-css">CSS</span>
+                    <span class="tech-pill js">JavaScript</span>
+                </div>
+                <hr>
+                <p>
+                    This is my personal portfolio website I designed to put all my work in one place. A basic static
+                    website created with HTML, CSS and JavaScript.
+                </p>
+            </div>
         </div>
 
-        <!--         <div class="project-card" data-category="academic">
-            <h3>_sample_</h3>
-            <span class="badge academic">Academic</span>
-            <p>This is just a sample.</p>
-            <div class="tags">
-                <span>Physics</span><span>Mathematics</span>
-            </div>
-            <a href="#" class="btn">Read Report</a>
-        </div> -->
     </section>
 
     <!-- Footer -->
